# studioanimations.app

./: .gitignore
fastapi_manim_app/: .env.example  .gitignore  README.md  alembic.ini  commands.txt  env.example  pyproject.toml
fastapi_manim_app/alembic/: env.py
fastapi_manim_app/alembic/versions/: add_messages_table.py  initial_migration.py
fastapi_manim_app/app/: main.py
fastapi_manim_app/app/api/: dependencies.py
fastapi_manim_app/app/api/routes/: animation.py  conversation.py  health.py  message.py
fastapi_manim_app/app/core/: config.py  database.py  logging.py
fastapi_manim_app/app/models/: animation.py  db_models.py
fastapi_manim_app/app/services/: animation_service.py  conversation_service.py  health_service.py  manim_service.py  message_service.py
fastapi_manim_app/tests/: conftests.py
fastapi_manim_app/tests/api/: animation_api.py  health_api.py
frontend/: bun.lockb  env.example  next.config.js  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(chat)/: layout.tsx
frontend/src/app/components/: app-sidebar.tsx  chat-input.tsx  delete-conversation-dialog.tsx  feature-buttons.tsx  rename-conversation-dialog.tsx  suggested-prompts.tsx  welcome-header.tsx
frontend/src/app/license/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/db/: schema.ts
frontend/src/hooks/: use-animation-status.ts  use-conversations.ts
frontend/src/lib/: auth.ts
frontend/src/types/: animation.ts
manimations/: bruno.json  create-animations.bru
(+14 files in other folders)
